micromixin-test-j8/src/main/java/org/stianloader/micromixin/test/j8/targets/invalid/InvalidOverwriteAccessReduction.java
package org.stianloader.micromixin.test.j8.targets.invalid;

public class InvalidOverwriteAccessReduction {

    public void callMethod() {
    }
}
